--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ng build --aot --prod"
+    "heroku-postbuild": "ng build --prod"
   },
   "engines": {
     "npm": "6.13.4",
@@ -38,6 +38,8 @@
     "@angular-devkit/build-angular": "~0.1100.2",
     "@angular/cli": "^11.0.2",
     "@angular/compiler-cli": "^11.0.2",
+    "@angular/common": "~11.0.1",
+    "@angular/compiler": "~11.0.1",
     "@types/jasmine": "~3.6.0",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
